OpenShift-Minikube/lab-31/nginx-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-network-policy
  namespace: default    # Specify the namespace where your NGINX pods are located
spec:
  podSelector:
    matchLabels:
      app: nginx     # Label selector to target NGINX pods
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}   # This allows traffic from all pods in the same namespace
    ports:
    - protocol: TCP
      port: 80
